--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -136,7 +136,7 @@ For managing organizations in your application, Clerk provides a set of prebuilt
 
 - [`<CreateOrganization />`](/docs/components/organization/create-organization) - A form for a user to create a new organization.
 - [`<OrganizationProfile />`](/docs/components/organization/organization-profile) - A profile page for the user's currently active organization.
-- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s).
+- [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) - A dropdown menu that allows a user to switch between their personal account and their organization account(s), as well as create a new organization if they have permission to do so.
 - [`<OrganizationList />`](/docs/components/organization/organization-list) - A list of organizations that a user is a member of.
 
 If Clerk's prebuilt components don't meet your specific needs or if you require more control over the logic, you can rebuild the existing Clerk flows using the Clerk API. Some useful guides include:
