--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -91,11 +91,17 @@ You can create organizations in the Clerk Dashboard or in your application. To c
 3. Select the **Create Organization** button.
 4. Enter the organization's name and slug. The slug is a unique identifier for the organization and is used in URLs. Select the organization's owner from the list of users in your application. The owner is the user who will be the organization's admin.
 
-The number of organizations you can create depends on your [Clerk plan](/pricing), and is measured by "monthly active organizations" (MAOs) - this means an organization with more than one user that has signed in that month.
+#### Monthly active organization (MAO)
 
-With the Free plan, you can have up to 100 MAOs on any given Clerk app. Each MAO can have up to 5 members.
+The number of organizations you can have in a single Clerk application depends on your [Clerk plan](https://clerk.com/pricing) and the type of instance (development or production), and is measured by "monthly active organizations" (MAOs). An MAO is an organization with more than one user that has signed in that month.
 
-For a Clerk app with the Pro plan, you can create up to 100 MAOs free. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. As an example, if you have 120 MAOs on your app, it would cost an extra $20/month, on top of the base Pro plan pricing at $25/month, for a total of $45/month.
+With the Free plan:
+- In development instances, you can have *up to* 50 MAOs in a single Clerk application. Each MAO can have *up to* 5 members.
+- In production instances, you can have up to 100 MAOs in a single Clerk application. Each MAO can have up to 5 members.
+
+With the Pro plan:
+- In development instances, you can have an unlimited number of MAOs in a single Clerk application *for free*. Each MAO can have an unlimited number of members.
+- In production instances, you can have up to 100 MAOs in a single Clerk application *for free*. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members.
 
 For more details on pricing, see [our pricing page](https://clerk.com/pricing).
 
@@ -105,9 +111,9 @@ If you need more organizations or custom pricing, please contact [our sales team
 
 Users can create organizations within your application. When a user creates an organization, they become the organization's admin. As the organization's admin, they have full control over the organization, including the ability to update the organization's settings, invite users to join the organization, and manage the organization's members.
 
-A user within one of your applications can create up to 100 organizations in that application. This limit is separate from the number of [organizations *you* can create](#application-owner) across your entire account.
+A user within one of your applications can create *up to* 100 organizations in that application. However, the number of [MAOs](#monthly-active-organization-mao) for that application must be kept in mind.
 
-The easiest way to allow users to create organizations is to use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) component. This component provides a form for users to create a new organization.
+The easiest way to allow users to create organizations is to use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) and/or [`<OrganizationSwitcher />`](/docs/components/organization/organization-switcher) components.
 
 ## Organization invitations
 
