--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -13,52 +13,53 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
-  <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-  ```tsx filename="layout.tsx"
-    import { ClerkProvider } from '@clerk/nextjs'
-    import './globals.css';
+    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+    ```tsx filename="layout.tsx"
+      import { ClerkProvider } from '@clerk/nextjs'
+      import './globals.css';
 
-    export default function RootLayout({
-      children,
-    }: {
-      children: React.ReactNode
-    }) {
+      export default function RootLayout({
+        children,
+      }: {
+        children: React.ReactNode
+      }) {
+        return (
+          <ClerkProvider>
+            <html lang="en">
+              <ClerkLoading>
+                <div>Clerk is loading...</div>
+              </ClerkLoading>
+              <ClerkLoaded>
+                <body>{children}</body>
+              </ClerkLoaded>
+            </html>
+          </ClerkProvider>
+        )
+      }
+    ```
+
+    ```tsx filename="pages/_app.tsx"
+    import "@/styles/globals.css";
+    import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
+    import { AppProps } from "next/app";
+
+    function MyApp({ Component, pageProps }: AppProps) {
       return (
-        <ClerkProvider>
-          <html lang="en">
-            <ClerkLoading>
-              <div>Clerk is loading...</div>
-            </ClerkLoading>
-            <ClerkLoaded>
-              <body>{children}</body>
-            </ClerkLoaded>
-          </html>
-        </ClerkProvider>
-      )
+
+      <ClerkProvider {...pageProps}>
+        <ClerkLoading>
+          <div>Clerk is loading</div>
+        </ClerkLoading>
+        <ClerkLoaded>
+          <Component {...pageProps} />
+        </ClerkLoaded>
+      </ClerkProvider>
+      );
     }
-  ```
 
-  ```tsx filename="pages/_app.tsx"
-  import "@/styles/globals.css";
-  import { ClerkLoaded, ClerkLoading, ClerkProvider } from "@clerk/nextjs";
-  import { AppProps } from "next/app";
-
-  function MyApp({ Component, pageProps }: AppProps) {
-    return (
-
-    <ClerkProvider {...pageProps}>
-      <ClerkLoading>
-        <div>Clerk is loading</div>
-      </ClerkLoading>
-      <ClerkLoaded>
-        <Component {...pageProps} />
-      </ClerkLoaded>
-    </ClerkProvider>
-    );
-  }
-
-  export default MyApp;
-  ```
+    export default MyApp;
+    ```
+    </CodeBlockTabs>
   </Tab>
 
   <Tab>
