fix app router examples

--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -14,7 +14,7 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="layout.tsx"
+    ```tsx filename="app/layout.tsx"
       import { ClerkProvider } from '@clerk/nextjs'
       import './globals.css';
 
@@ -26,12 +26,14 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
         return (
           <ClerkProvider>
             <html lang="en">
-              <ClerkLoading>
-                <div>Clerk is loading...</div>
-              </ClerkLoading>
-              <ClerkLoaded>
-                <body>{children}</body>
-              </ClerkLoaded>
+              <body>
+                <ClerkLoading>
+                  <div>Clerk is loading...</div>
+                </ClerkLoading>
+                <ClerkLoaded>
+                  {children}
+                </ClerkLoaded>
+              </body>
             </html>
           </ClerkProvider>
         )
