--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -16,7 +16,7 @@ The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and wi
   <Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
     ```tsx filename="app/layout.tsx"
-      import { ClerkProvider } from '@clerk/nextjs'
+      import { ClerkProvider, ClerkLoaded, ClerkLoading } from '@clerk/nextjs'
       import './globals.css';
 
       export default function RootLayout({
