--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -15,7 +15,7 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
     ```tsx filename="app/layout.tsx"
-      import { ClerkProvider } from '@clerk/nextjs'
+      import { ClerkProvider, ClerkLoaded, ClerkLoading } from '@clerk/nextjs'
       import './globals.css';
 
       export default function RootLayout({
